--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 				<div class="col-12-s6-m4" id="method">
 					<label class="input__label">Upload Method</label>
 					<div>
-						<button data-value="upload" id="computerButton" class="bttn left fill active">Upload</button>
+						<button data-value="upload" id="computerButton" class="bttn left fill active">Upload The Image You Clicked Now ↓</button>
 					</div>
 				</div>
 
@@ -73,7 +73,8 @@
 				<div class="col-6-m3" id="format">
 					<label class="input__label">Inference Result</label>
 					<div>
-						<button id="imageButton" data-value="image" class="bttn left fill active">Image</button>
+						<button id="imageButton" data-value="Image" class="bttn left active">Image</button>
+							<button id="jsonButton" data-value="json" class="bttn right fill">JSON</button>
 					</div>
 				</div>
 				<div class="col-12 content__grid" id="imageOptions">
