--- a/index.html
+++ b/index.html
@@ -1,13 +1,3 @@
-<!DOCTYPE html>
-<html lang="en" >
-<head>
-  <meta charset="UTF-8">
-  <title>Roboflow Inference Example</title>
-  <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/tailwindcss/1.9.6/tailwind.min.css'><link rel="stylesheet" href="./style.css">
-
-</head>
-<body>
-<!-- partial:index.partial.html -->
 <head>
 	<link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet">
 	<link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
@@ -17,13 +7,18 @@
 	<form id="inputForm">
 		<div class="header">
 			<div class="header__grid">
-				
 				<img class="header__logo" src="https://i.ibb.co/nC3MbBy/Fruity-Fy-Official-API.png" alt="Roboflow Inference">
 				<div>
+					<label class="header__label" for="model">Model</label>
+					<input class="input" type="text" id="model" value="fruits-quality-qtdtf" />
 				</div>
 				<div>
+					<label class="header__label" for="version">Version</label>
+					<input class="input" type="number" id="version" value="1" />
 				</div>
 				<div>
+					<label class="header__label" for="api_key">API Key</label>
+					<input class="input" type="text" id="api_key" value="l7C0y07Thwda2CyAHThy" />
 				</div>
 			</div>
 		</div>
@@ -33,7 +28,8 @@
 				<div class="col-12-s6-m4" id="method">
 					<label class="input__label">Upload Method</label>
 					<div>
-						<button data-value="upload" id="computerButton" class="bttn left fill active">Upload The Image You Clicked Now ↓</button>
+						<button data-value="upload" id="computerButton" class="bttn left fill active">Upload</button>
+						<button data-value="url" id="urlButton" class="bttn right  fill"disabled>URL</button>
 					</div>
 				</div>
 
@@ -54,17 +50,20 @@
 				</div>
         
 				<div class="col-12-m6">
+					<label class="input__label" for="classes">Filter Classes</label>
+					<input type="text" id="classes" placeholder="Enter class names" class="input"/><br>
+					<span class="text--small">Separate names with commas</span>
 				</div>
 
 				<div class="col-6-m3 relative">
-					<label class="input__label" for="confidence">Confidence Of AI On The Result</label>
+					<label class="input__label" for="confidence">Min Confidence</label>
 					<div>
 						<i class="fas fa-crown"></i>
 						<span class="icon">%</span>
 						<input type="number" id="confidence" value="50" max="100" accuracy="2" min="0" class="input input__icon"/></div>
 					</div>
 				<div class="col-6-m3 relative">
-					<label class="input__label" for="overlap">Maximum Overlaps</label>
+					<label class="input__label" for="overlap">Max Overlap</label>
 					<div>
 						<i class="fas fa-object-ungroup"></i>
 						<span class="icon">%</span>
@@ -73,22 +72,23 @@
 				<div class="col-6-m3" id="format">
 					<label class="input__label">Inference Result</label>
 					<div>
-						<button id="imageButton" data-value="Image" class="bttn left active">Image</button>
-							<button id="jsonButton" data-value="json" class="bttn right fill">JSON</button>
+						<button id="imageButton" data-value="image" class="bttn left fill active" disabled>Image</button>
+						<button id="jsonButton" data-value="json" class="bttn right fill">JSON</button>
 					</div>
 				</div>
 				<div class="col-12 content__grid" id="imageOptions">
 					<div class="col-12-s6-m4" id="labels">
 						<label class="input__label">Labels</label>
 						<div>
-							<button data-value="on" class="bttn right active">On</button>
+							<button class="bttn left active">Off</button>
+							<button data-value="on" class="bttn right">On</button>
 						</div>
 					</div>
 					<div class="col-12-s6-m4" id="stroke">
-						<label class="input__label">AI Detected Fruit Frame Width</label>
+						<label class="input__label">Stroke Width</label>
 						<div>
-							<button data-value="1" class="bttn left">1px</button>
-							<button data-value="2" class="bttn active">2px</button>
+							<button data-value="1" class="bttn left active">1px</button>
+							<button data-value="2" class="bttn">2px</button>
 							<button data-value="5" class="bttn">5px</button>
 							<button data-value="10" class="bttn right">10px</button>
 						</div>
@@ -109,10 +109,3 @@
 		</div>
 	</form>
 </body>
-<!-- partial -->
-  <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js'></script>
-<script src='https://cdnjs.cloudflare.com/ajax/libs/lodash.js/4.17.20/lodash.min.js'></script>
-<script src='https://cdnjs.cloudflare.com/ajax/libs/async/3.2.0/async.min.js'></script><script  src="./script.js"></script>
-
-</body>
-</html>
